# pibot

./: .gitignore  .gitmodules  AGENTS.md  README.md  biome.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: parakeet-cpp-stt-release.yml  parakeet-cpp-transcribe-release.yml
.husky/: pre-commit
ft232h-webusb/: README.md  index.html  main.js  serve.sh
native/parakeet-cpp-stt/: CMakeLists.txt  README.md
native/parakeet-cpp-stt/src/: cli.cpp
native/pibot-stt/: CMakeLists.txt  Cargo.toml  README.md  pibot_stt.cpp
native/pibot-stt/src/: main.rs
public/: aec-test.html  barge-in-test.html  index.html  style.css
scripts/: benchmark-qwen3-tts-engines.mjs  benchmark-tts-concurrency.mjs  build-qwen3-tts-cpp.mjs  build-stt.mjs  check-lockfile-commit.mjs  dev.mjs  download-stt-model.mjs  parakeet-stt-worker.py  qwen3-tts-worker.py  stt-test.mjs
src/: client.ts  memory.ts  server.ts  types.ts
src/client/: barge-in.ts  index.ts
src/client/tools/: index.ts  photo.ts  speech.ts
src/server/: config.ts  harness.ts  http-server.ts  index.ts  llama.ts  log-stream.ts  logger.ts  memory-store.ts  robot-client.ts  stt.ts  tts.ts
src/server/tools/: context.ts  index.ts  memory.ts  motor.ts  photo.ts  sleep.ts  websearch.ts
src/server/types/: turndown-plugin-gfm.d.ts
